@@ -1302,3 +1302,4 @@
 ( cvs diff -u -r 1.179.2.98 -r 1.179.2.99 src/imap.c;  cvs diff -u -r 1.2.2.15 -r 1.2.2.16 src/gtk/inputdialog.c;  ) > 2.0.0cvs116.patchset
 ( cvs diff -u -r 1.96.2.99 -r 1.96.2.100 src/textview.c;  ) > 2.0.0cvs117.patchset
 ( cvs diff -u -r 1.101.2.22 -r 1.101.2.23 src/news.c;  cvs diff -u -r 1.2.2.16 -r 1.2.2.17 src/news_gtk.c;  ) > 2.0.0cvs118.patchset
+( cvs diff -u -r 1.213.2.84 -r 1.213.2.85 src/folder.c;  cvs diff -u -r 1.87.2.25 -r 1.87.2.26 src/folder.h;  cvs diff -u -r 1.207.2.89 -r 1.207.2.90 src/folderview.c;  ) > 2.0.0cvs119.patchset
