@@ -1,3 +1,12 @@
+2006-03-07 [paul]	2.0.0cvs119
+
+	* src/folder.c
+	* src/folder.h
+	* src/folderview.c
+		immediately do alphabetical resort when
+		changing a folder's name
+		Patch by Pawel Pekala
+
 2006-03-07 [paul]	2.0.0cvs118
 
 	* src/news.c
